fixed code blocks on mobile

--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -41,6 +41,7 @@ figure.highlight {
   font-family: $monospace-font-family;
   font-size: 90%;
   line-height: 1.8;
+  overflow-x: auto;
 
   > pre,
   pre.highlight {
