--- a/css/syntax.css
+++ b/css/syntax.css
@@ -15,7 +15,8 @@ figure.highlight {
   color: #586e75;
   font-family: Consolas, monospace;
   font-size: 90%;
-  line-height: 1.8; }
+  line-height: 1.8;
+  overflow-x: auto; }
   div.highlighter-rouge > pre,
   div.highlighter-rouge pre.highlight,
   figure.highlight > pre,
@@ -246,3 +247,5 @@ figure.highlight {
 .gist td,
 .gist th {
   border-bottom: 0; }
+
+/*# sourceMappingURL=syntax.css.map */
